# Fortran-CC

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: fileread.f90  main.f90  tokenizer.f90
src/modules/: fileread.f90  tokenizer.f90
